show page numbers in text

--- a/html/stylesheets/template.css
+++ b/html/stylesheets/template.css
@@ -34,3 +34,11 @@
         to { visibility: hidden; }
       }
       .hidden {display:none;}
+
+span.pagenum:content {
+  attr(data-num);
+  padding: 5px; color: silver; font-size: 6pt; vertical-align: super;
+}
+
+
+
