show page numbers in text

--- a/html/stylesheets/template.css
+++ b/html/stylesheets/template.css
@@ -37,7 +37,7 @@
       .hidden {display:none;}
 
 span.pagenum:after {
-  content: attr('data-num');
+  content: attr(data-num);
   padding: 5px; color: silver; font-size: 6pt; vertical-align: super;
 }
 
