--- a/html/stylesheets/stylesheet.css
+++ b/html/stylesheets/stylesheet.css
@@ -64,14 +64,14 @@ a:hover {
 }
 
 header {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 20px;
+  padding-bottom: 20px;
   font-family: 'Architects Daughter', 'Helvetica Neue', Helvetica, Arial, serif;
   background: #2e7bcf url(../images/header-bg.jpg) 0 0 repeat-x;
   border-bottom: solid 1px #275da1;
 }
 
-header h1 {
+header h1, header h1 a {
   letter-spacing: -1px;
   font-size: 72px;
   color: #fff;
@@ -477,3 +477,5 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) {}
+
+
