--- a/html/stylesheets/template.css
+++ b/html/stylesheets/template.css
@@ -6,7 +6,9 @@
       mark.term.correction {text-shadow: 0px 0px .3em rgba(255,230,0,.5); }
       mark.term.misspelled {text-decoration: line-through; border: 0;}
       mark.term.unknown  {text-shadow: 0px 0px .3em rgba(100,149,237,.8);}
-      div.legend {font-size: 9.5pt; margin: .5em; padding:.5em; float:right; line-height: 1.5em; border: 1px dashed gray;}
+      .legend {font-size: 9.5pt; margin: .5em; padding:.5em; float:right;
+        line-height: 1.5em; border: 1px dashed gray; background-color: white;
+      }
 
       .accents-report {width: 80%; border: 1px dashed silver;
         line-height: 1em; font-size: 14pt; margin: 1em; padding: .75em;
@@ -43,6 +45,8 @@ span.pagenum:after {
   background-color: gray;
 
 }
+
+.suggest_text {width: 2em; height: 1em;}
 
 
 
